# dev-challenge-backend-xxi

./: ChallengeDescription.md  MFA_Ukraine_Call_Processing_System_Tests.postman_collection.json  README.md  docker-compose.yml
backend/: .env  .envexample  Dockerfile  README.md  cat_playground.ipynb  pyproject.toml  tts_playground.ipynb
backend/api/: convert.py  handlers.py  urls.py
backend/calls/: admin.py  apps.py  choices.py  models.py  serializers.py  signals.py  tasks.py  views.py
backend/calls/migrations/: 0001_initial.py  0002_alter_call_audio_alter_call_status.py  0003_remove_call_status_call_qa_for_location_worked_and_more.py  0004_call_zero_shot_classification_finish_time.py  0005_alter_call_emotional_tone.py
backend/categories/: admin.py  models.py  serializers.py  service.py  signals.py  tasks.py  views.py
backend/categories/migrations/: 0001_initial.py  0002_auto_20240929_0308.py  0003_alter_category_options.py  0004_category_candidate_labels.py
backend/core/: consts.py  settings.py  storages.py  urls.py
categorization_service/: README.md  config.json  download_model.py  main.py  pyproject.toml  service.Dockerfile  worker.Dockerfile  worker.py
categorization_service/core/: consts.py  manager.py
speech_to_text_service/: README.md  config.json  download_model.py  main.py  pyproject.toml  worker.py
speech_to_text_service/core/: manager.py  settings.py  storage.py
