[tool.poetry]
name = "dev-challenge-categorization_service"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
python-multipart = "^0.0.10"
requests = "^2.32.3"
arq = "^0.26.1"

[tool.poetry.group.service]
optional = true

[tool.poetry.group.service.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.30.6"

[tool.poetry.group.worker]
optional = true

[tool.poetry.group.worker.dependencies]
transformers = "^4.44.2"
tensorflow = "^2.17.0"
tf-keras= "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
